2003-11-11  Vicki Murley  <vicki@apple.com>

        - apply this fix to the SUPanBisque branch
        
    2003-11-06  Richard Williamson   <rjw@apple.com>

        Fixed 3476393.  Call scrollPoint: recursively up the view hierarchy to ensure point is visible.

        Reviewed by Ken.

        * Misc.subproj/WebNSViewExtras.h:
        * Misc.subproj/WebNSViewExtras.m:
        (-[NSView _web_scrollPointToVisible:fromView:]):
        * WebView.subproj/WebHTMLView.m:
        (-[WebHTMLView scrollPoint:]):

=== WebKit-106 ===

2003-09-16  Richard Williamson   <rjw@apple.com>

	Backed out fix to 3412062 to resolve 3424197.

	Many sites use a technique of posting forms the same URL to generate content server side.  The fix to 3412062 broke those sites.

        Reviewed by Darin.

        * WebView.subproj/WebFramePrivate.m:
        (-[WebFrame _transitionToCommitted:]):

=== WebKit-105 ===

=== WebKit-104 ===

2003-09-12  Richard Williamson   <rjw@apple.com>

	Fixed 3420097.  If redirects are cancelled during a pending load don't reset the quickRedirect flag.

        Reviewed by Darin.

        * WebCoreSupport.subproj/WebBridge.m:
        (-[WebBridge reportClientRedirectCancelled:]):
        * WebView.subproj/WebFramePrivate.h:
        * WebView.subproj/WebFramePrivate.m:
        (-[WebFrame _continueFragmentScrollAfterNavigationPolicy:formState:]):
        (-[WebFrame _loadURL:referrer:loadType:target:triggeringEvent:form:formValues:]):
        (-[WebFrame _clientRedirectedTo:delay:fireDate:lockHistory:isJavaScriptFormAction:]):
        (-[WebFrame _clientRedirectCancelled:]):

=== WebKit-103 ===

2003-09-12  Richard Williamson   <rjw@apple.com>

	Fixed 3412062.  Don't allow pages with the same URL as the current URL to enter b/f or history.

        Reviewed by Maciej.

        * WebView.subproj/WebFramePrivate.m:
        (-[WebFrame _transitionToCommitted:]):

2003-09-11  Maciej Stachowiak  <mjs@apple.com>

        Reviewed by Darin.
