@@ -1,3 +1,11 @@
+2003-11-13  Vicki Murley  <vicki@apple.com>
+
+        Reviewed by NOBODY (OOPS!).
+
+        * WebView.subproj/WebHTMLView.m:
+        (-[WebHTMLView keyDown:]):
+        (-[WebHTMLView keyUp:]):
+
 2003-11-11  Vicki Murley  <vicki@apple.com>
 
         - apply this fix to the SUPanBisque branch
